pagination + clean + view on hover

--- a/src/elements/app.html
+++ b/src/elements/app.html
@@ -69,7 +69,7 @@
                 placeholder="Search for a gif ..."
                 autocomplete="off" />
 
-            <p><span class="giphy"></span></p>
+            <p><a href="http://giphy.com/" target="_blank" class="giphy"></a></p>
 
         </div>
 
