--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
 
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
     <link rel="import" href="bower/polymer/polymer.html">
     <link rel="import" href="bower/paper-card/paper-card.html">
     <link rel="import" href="bower/paper-icon-button/paper-icon-button.html">
@@ -16,17 +18,19 @@
     <link rel="import" href="bower/iron-ajax/iron-ajax.html">
     <link rel="import" href="bower/iron-input/iron-input.html">
     <link rel="import" href="bower/iron-icons/iron-icons.html">
+    <link rel="import" href="bower/iron-icons/hardware-icons.html">
 
     <link rel="import" href="elements/app.html">
     <link rel="import" href="elements/list.html">
     <link rel="import" href="elements/item.html">
+    <link rel="import" href="elements/view.html">
 
     <style>
         body {
             padding: 0px;
             margin: 0px;
             background-color: #31A2FB;
-            font-family: 'Roboto', 'Noto', sans-serif;
+            font-family: 'Open Sans', sans-serif;
         }
     </style>
 </head>
