--- a/src/elements/view.html
+++ b/src/elements/view.html
@@ -5,12 +5,18 @@
             position: absolute;
             z-index: 1000;
             top: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
         }
 
         .view ._actions {
-            background-color: rgba(0, 0, 0, 0.7);
             margin-top: -5px;
             color: #fff;
+        }
+
+        .view iron-image {
+            width: 100%;
+            height: 250px;
         }
 
         paper-tooltip {
@@ -25,16 +31,15 @@
             <iron-image
                 preload
                 fade
-                src="{{ item.images.original.url }}"
-                width="{{ item.images.original.width }}"
-                height="{{ item.images.original.height }}"></iron-image>
+                sizing="contain"
+                src="{{ item.images.original.url }}"></iron-image>
 
             <div class="_actions">
-                <paper-icon-button class="clipboard" id="content-paste" icon="content-paste"></paper-icon-button>
+                <paper-icon-button class="clipboard" id="content-copy" icon="content-copy"></paper-icon-button>
                 <paper-icon-button class="clipboard" id="code" icon="code"></paper-icon-button>
                 <paper-icon-button id="file-download" icon="file-download" on-tap="download"></paper-icon-button>
 
-                <paper-tooltip for="content-paste" offset="0">Copy to clipboard</paper-tooltip>
+                <paper-tooltip for="content-copy" offset="0">Copy to clipboard</paper-tooltip>
                 <paper-tooltip for="code" offset="0">Copy as Markdown code</paper-tooltip>
                 <paper-tooltip for="file-download" offset="0">Download image</paper-tooltip>
             </div>
