--- a/index.html
+++ b/index.html
@@ -14251,8 +14251,20 @@ is separate from validation, and `allowed-pattern` does not affect how the input
     <style>
         :host {
             float: left;
-            width: 20%;
+            width: 25%;
             margin-bottom: -5px;
+        }
+
+        @media (max-width:960px) {
+            :host {
+                width: 50%;
+            };
+        }
+
+        @media (max-width:500px) {
+            :host {
+                width: 100%;
+            };
         }
 
         paper-tooltip {
@@ -14262,17 +14274,75 @@ is separate from validation, and `allowed-pattern` does not affect how the input
 
         iron-image {
             width: 100%;
-            height: 200px;
+            height: 250px;
         }
 
         .item {
             position: relative;
+            cursor: pointer;
+        }
+
+        /*.item * {
+            pointer-events: none;
+        }*/
+
+        .loading {
+            bottom: 10px;
+            position: absolute;
+            z-index: 1000;
+            margin-left: 10%;
+            width: 80%;
+            height: 10px;
+            border-radius: 50px;
+            background: #47A6F7;
+            -webkit-animation: right 0.3s infinite ease-in-out;
+            -moz-animation: right 0.3s infinite ease-in-out;
+            animation: right 0.3s infinite ease-in-out;
+            display: none;
+        }
+
+        @-webkit-keyframes right {
+          0%   { -webkit-transform: translate(-15px);   }
+          50%  { -webkit-transform: translate(15px);    }
+          100% { -webkit-transform: translate(-15px);   }
+        }
+
+        @-webkit-keyframes left {
+          0%   { -webkit-transform: translate(15px);    }
+          50%  { -webkit-transform: translate(-15px);   }
+          100% { -webkit-transform: translate(15px);    }
+        }
+
+        @-moz-keyframes right {
+          0%   { -moz-transform: translate(-15px);   }
+          50%  { -moz-transform: translate(15px);    }
+          100% { -moz-transform: translate(-15px);   }
+        }
+
+        @-moz-keyframes left {
+          0%   { -moz-transform: translate(15px);    }
+          50%  { -moz-transform: translate(-15px);   }
+          100% { -moz-transform: translate(15px);    }
+        }
+
+        @keyframes right {
+          0%   { transform: translate(-15px);  }
+          50%  { transform: translate(15px);   }
+          100% { transform: translate(-15px);  }
+        }
+
+        @keyframes left {
+          0%   { transform: translate(15px);   }
+          50%  { transform: translate(-15px);  }
+          100% { transform: translate(15px);   }
         }
     </style>
 
     <template>
 
         <div class="item">
+
+            <div class="loading"></div>
 
             <iron-image preload="" fade="" sizing="cover" src="{{ item.images.original_still.url }}"></iron-image>
 
@@ -14295,11 +14365,28 @@ is separate from validation, and `allowed-pattern` does not affect how the input
             _attachWatchers: function() {
                 var element = this.querySelector('.item');
                 var view = this.querySelector('figme-item-view');
+                var loading = element.querySelector('.loading');
+                var timer;
+
                 element.addEventListener('mouseover', function(event) {
-                    view.show();
+                    if ( view.querySelector('iron-image').loaded ) {
+                        view.show();
+                        return;
+                    }
+                    loading.style.display = 'block';
+                    timer = setInterval(function(){
+                        if ( view.querySelector('iron-image').loaded ) {
+                            loading.style.display = 'none';
+                            view.show();
+                            clearInterval(timer);
+                        }
+                    }, 150);
                 });
+
                 element.addEventListener('mouseout', function(event) {
                     view.hide();
+                    loading.style.display = 'none';
+                    clearInterval(timer);
                 });
             }
         });
@@ -14313,12 +14400,18 @@ is separate from validation, and `allowed-pattern` does not affect how the input
             position: absolute;
             z-index: 1000;
             top: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
         }
 
         .view ._actions {
-            background-color: rgba(0, 0, 0, 0.7);
             margin-top: -5px;
             color: #fff;
+        }
+
+        .view iron-image {
+            width: 100%;
+            height: 250px;
         }
 
         paper-tooltip {
@@ -14330,14 +14423,14 @@ is separate from validation, and `allowed-pattern` does not affect how the input
 
         <div class="view" hidden$="{{ !isShown }}">
 
-            <iron-image preload="" fade="" src="{{ item.images.original.url }}" width="{{ item.images.original.width }}" height="{{ item.images.original.height }}"></iron-image>
+            <iron-image preload="" fade="" sizing="contain" src="{{ item.images.original.url }}"></iron-image>
 
             <div class="_actions">
-                <paper-icon-button class="clipboard" id="content-paste" icon="content-paste"></paper-icon-button>
+                <paper-icon-button class="clipboard" id="content-copy" icon="content-copy"></paper-icon-button>
                 <paper-icon-button class="clipboard" id="code" icon="code"></paper-icon-button>
                 <paper-icon-button id="file-download" icon="file-download" on-tap="download"></paper-icon-button>
 
-                <paper-tooltip for="content-paste" offset="0">Copy to clipboard</paper-tooltip>
+                <paper-tooltip for="content-copy" offset="0">Copy to clipboard</paper-tooltip>
                 <paper-tooltip for="code" offset="0">Copy as Markdown code</paper-tooltip>
                 <paper-tooltip for="file-download" offset="0">Download image</paper-tooltip>
             </div>
