--- a/src/elements/view.html
+++ b/src/elements/view.html
@@ -32,7 +32,8 @@
                 preload
                 fade
                 sizing="contain"
-                src="{{ item.images.original.url }}"></iron-image>
+                src="{{ item.images.original.url }}"
+                on-tap="copy"></iron-image>
 
             <div class="_actions">
                 <paper-icon-button class="clipboard" id="content-copy" icon="content-copy"></paper-icon-button>
@@ -69,6 +70,9 @@
                 link.download = null;
                 link.href = this.item.images.original.url;
                 link.click();
+            },
+            copy: function() {
+                this.querySelector('#content-copy').click();
             }
         });
     </script>
