--- a/src/elements/list.html
+++ b/src/elements/list.html
@@ -108,6 +108,7 @@
                 this.$.search.params.offset = this.offset;
                 this.$.search.params.q = this.query;
                 this.$.search.generateRequest();
+                this._appendQueryToURL();
             },
             clear: function(event) {
                 if (event) {
@@ -115,6 +116,7 @@
                 }
                 this.items = {};
                 this.offset = 0;
+                this._removeQueryFromURL();
             },
             more: function() {
                 this.offset += 25;
@@ -139,6 +141,21 @@
                 .on('success', function() {
                     this.$.copied.show();
                 }.bind(this));
+            },
+            _appendQueryToURL: function() {
+                var queryHash = '/search/' + encodeURIComponent(this.query);
+                window.location.hash = queryHash;
+            },
+            _removeQueryFromURL: function() {
+                window.location.hash = '/';
+            },
+            _detectQueryOnURL: function() {
+                var hash = window.location.hash.split('/');
+                var hasQuery = hash && hash[1] === 'search' && hash[2] !== '';
+                return !!hasQuery;
+            },
+            _getQueryFromURL: function() {
+                return decodeURIComponent(window.location.hash.split('/')[2]);
             }
         });
     </script>
