--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
 
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
+    <script src="bower/color-thief/dist/color-thief.min.js"></script>
 
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
+    <link rel="stylesheet" href="styles/main.css">
 
     <link rel="import" href="bower/polymer/polymer.html">
     <link rel="import" href="bower/paper-card/paper-card.html">
@@ -24,15 +26,7 @@
     <link rel="import" href="elements/list.html">
     <link rel="import" href="elements/item.html">
     <link rel="import" href="elements/view.html">
-
-    <style>
-        body {
-            padding: 0px;
-            margin: 0px;
-            background-color: #31A2FB;
-            font-family: 'Open Sans', sans-serif;
-        }
-    </style>
+    <link rel="import" href="elements/colors.html">
 </head>
 <body unresolved fullbleed>
 
