--- a/src/elements/list.html
+++ b/src/elements/list.html
@@ -16,22 +16,41 @@
             last-response="{{ items }}"></iron-ajax>
 
         <template is="dom-if" if="{{ items.data }}">
+
             <div class="stats">
-                Total: <span>[[ items.pagination.total_count ]]</span> - <a href="#" on-tap="clear">Clear</a>
+
+                Total: <span>[[ items.pagination.total_count ]]</span>
+                - <a href="#" on-tap="clear">Clear</a>
+
+                <template is="dom-if" if="{{ color }}">
+                    <span class="filter"><a href="#" on-tap="removeColorFilter">Remove color filter</a></span>
+                </template>
+
             </div>
+
             <figme-colors></figme-colors>
+
         </template>
 
         <div class="container">
+
             <template is="dom-repeat" items="{{ results }}" filter="{{ filterColor(color) }}">
+
                 <figme-item item="{{ item }}"></figme-item>
+
             </template>
+
         </div>
 
         <template is="dom-if" if="{{ ifMore }}">
+
             <div class="more">
-                <paper-icon-button icon="hardware:keyboard-arrow-down" on-tap="more"></paper-icon-button>
+
+                <paper-icon-button icon="hardware:keyboard-arrow-down"
+                    on-tap="more"></paper-icon-button>
+
             </div>
+
         </template>
 
         <paper-toast id="copied" text="Copied!"></paper-toast>
