--- a/src/elements/list.html
+++ b/src/elements/list.html
@@ -8,7 +8,7 @@
             id="search"
             url="http://api.giphy.com/v1/gifs/search"
             params='{
-                "api_key": "dc6zaTOxFJmzC",
+                "api_key": "PRzg5f1DktmCY",
                 "q": null,
                 "limit": 12
             }'
