--- a/src/elements/view.html
+++ b/src/elements/view.html
@@ -2,6 +2,12 @@
 
     <link rel="stylesheet" href="../styles/view.css">
 
+    <style>
+        paper-tooltip {
+            --paper-tooltip-background: #47A6F7;
+        }
+    </style>
+
     <template>
 
         <div class="view" hidden$="{{ !isShown }}">
