--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="/statics/images/screen.png">
+    <meta name="twitter:image" content="http://figme.co/statics/images/screen.png">
     <meta property="og:title" content="Figme | Search gifs using Giphy API">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://figme.co/">
-    <meta property="og:image" content="/statics/images/screen.png">
+    <meta property="og:image" content="http://figme.co/statics/images/screen.png">
     <meta property="og:description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter.">
     <meta property="og:site_name" content="Figme.co">
 
