refactor URIHash + shares

--- a/src/elements/app.html
+++ b/src/elements/app.html
@@ -14,7 +14,13 @@
                 autocomplete="off"
                 autofocus />
 
-            <p><a href="http://giphy.com/" target="_blank" class="giphy"></a></p>
+            <p>
+                <span class="links">
+                    <iron-icon icon="icons:code"></iron-icon> with <iron-icon icon="icons:favorite"></iron-icon> by
+                    <a href="http://maxigimenez.github.io/" target="_blank">@maxigimenez</a>
+                </span>
+                <a href="http://giphy.com/" target="_blank" class="giphy"></a>
+            </p>
 
         </div>
 
