--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Figme | Search gifs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Figme | Search gifs</title>
     <meta name="description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter." />
+
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@gmaxi_">
     <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="/statics/images/screen.png">
+    <meta name="twitter:image" content="http://figme.co/statics/images/screen.png">
+
     <meta property="og:title" content="Figme | Search gifs using Giphy API" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="http://figme.co/" />
-    <meta property="og:image" content="/statics/images/screen.png" />
+    <meta property="og:image" content="http://figme.co/statics/images/screen.png" />
     <meta property="og:description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter." />
     <meta property="og:site_name" content="Figme.co" />
 
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
     <script src="bower/color-thief/dist/color-thief.min.js"></script>
+    <script src="helpers/URIHash.js"></script>
 
     <link rel="stylesheet" href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
     <link rel="stylesheet" href="styles/main.css">
@@ -40,10 +43,12 @@
     <link rel="import" href="elements/item.html">
     <link rel="import" href="elements/view.html">
     <link rel="import" href="elements/colors.html">
+    <link rel="import" href="elements/shares.html">
 </head>
 <body unresolved fullbleed>
 
     <figme-app></figme-app>
+    <figme-shares></figme-shares>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
