--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8">
+<!DOCTYPE html><html itemscope="" itemtype="http://schema.org/Article"><head><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Figme | Search gifs</title>
     <meta name="description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter.">
@@ -8,14 +8,18 @@
     <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="http://figme.co/statics/images/screen.png">
+    <meta name="twitter:image" content="http://www.figme.co/statics/images/screen.png">
 
     <meta property="og:title" content="Figme | Search gifs using Giphy API">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://figme.co/">
-    <meta property="og:image" content="http://figme.co/statics/images/screen.png">
+    <meta property="og:url" content="http://www.figme.co/">
+    <meta property="og:image" content="http://www.figme.co/statics/images/screen.png">
     <meta property="og:description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter.">
-    <meta property="og:site_name" content="Figme.co">
+    <meta property="og:site_name" content="Figme">
+
+    <meta itemprop="name" content="Figme | Search gifs using Giphy API">
+    <meta itemprop="description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
+    <meta itemprop="image" content="http://www.figme.co/statics/images/screen.png">
 
     <script>/**
  * @license
